--- a/package.json
+++ b/package.json
@@ -24,14 +24,15 @@
   ],
   "dependencies": {
     "@saber2pr/ptbk": "^0.1.4",
-    "@saber2pr/utils": "^0.0.6",
+    "@saber2pr/utils": "^0.0.7",
     "antd": "^4.18.7",
     "axios": "^0.26.0",
+    "echarts": "^5.4.1",
     "md5": "^2.3.0",
     "normalize.css": "^8.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
@@ -40,7 +41,7 @@
     "@babel/preset-typescript": "^7.16.7",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
-    "@types/styled-components": "^5.1.21",
+    "@types/styled-components": "^5.1.26",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.7.2",
     "babel-loader": "^8.2.3",
